added rudimentary website

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,3 +7,4 @@ export(scale_color_malisha)
 export(scale_fill_csafe)
 export(scale_fill_malisha)
 export(theme_csafe)
+importFrom(ggplot2,scale_fill_manual)
